force-app/main/default/objects/TW1_Interaction__c/TW1_Interaction__c.object-meta.xml
<CustomObject>
    <label>Interaction</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>