force-app/main/default/objects/TW1_Interaction__c/fields/ActionCompleted__c.field-meta.xml
<CustomField>
    <fullName>ActionCompleted__c</fullName>
    <label>Action completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>