force-app/main/default/objects/TW1_Interaction__c/fields/AdictionalEmail1__c.field-meta.xml
<CustomField>
    <fullName>AdictionalEmail1__c</fullName>
    <label>Adictional email 1</label>
    <type>Email</type>
</CustomField>