force-app/main/default/objects/TW1_Interaction__c/fields/AdictionalEmail2__c.field-meta.xml
<CustomField>
    <fullName>AdictionalEmail2__c</fullName>
    <label>Adictional email 2</label>
    <type>Email</type>
</CustomField>