force-app/main/default/objects/TW1_Interaction__c/fields/AdictionalEmail3__c.field-meta.xml
<CustomField>
    <fullName>AdictionalEmail3__c</fullName>
    <label>Adictional email 3</label>
    <type>Email</type>
</CustomField>