force-app/main/default/objects/TW1_Interaction__c/fields/Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Status__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved without nonconformities</fullName>
            </value>
            <value>
                <fullName>Approved with nonconformities</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Audit Filled</fullName>
            </value>
            <value>
                <fullName>Awaiting Evidence</fullName>
            </value>
            <value>
                <fullName>Evidence Approved</fullName>
            </value>
            <value>
                <fullName>Audit Process Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Awaiting Evidence Validation</fullName>
            </value>
            <value>
                <fullName>Evidence Rejected</fullName>
            </value>
            <value>
                <fullName>Action Plan Reproved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>