force-app/main/default/objects/TW1_Interaction__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments of evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>