force-app/main/default/objects/TW1_Interaction__c/fields/CommentsEvidenceValidations__c.field-meta.xml
<CustomField>
    <fullName>CommentsEvidenceValidations__c</fullName>
    <label>Comments of evidence validations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>