force-app/main/default/objects/TW1_Interaction__c/fields/CommentsValidation__c.field-meta.xml
<CustomField>
    <fullName>CommentsValidation__c</fullName>
    <label>Comments of validation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>