force-app/main/default/objects/TW1_Interaction__c/fields/DataLimiteParaTratativa__c.field-meta.xml
<CustomField>
    <fullName>DataLimiteParaTratativa__c</fullName>
    <label>Data limite para tratativa</label>
    <type>Date</type>
</CustomField>