force-app/main/default/objects/TW1_Interaction__c/fields/DeadlineForSendingEvidence__c.field-meta.xml
<CustomField>
    <fullName>DeadlineForSendingEvidence__c</fullName>
    <label>Deadline for sending evidence</label>
    <type>Date</type>
</CustomField>