force-app/main/default/objects/TW1_Interaction__c/fields/DidYouAttachAllTheEvidente__c.field-meta.xml
<CustomField>
    <fullName>DidYouAttachAllTheEvidente__c</fullName>
    <label>Did you attach all the evidente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>