force-app/main/default/objects/TW1_Interaction__c/fields/EmailMainSupplierContact__c.field-meta.xml
<CustomField>
    <fullName>EmailMainSupplierContact__c</fullName>
    <formula>TW1_Supplier__r.TW1_Step_Owner__r.Email</formula>
    <label>Email of main supplier contact</label>
    <type>Text</type>
</CustomField>