force-app/main/default/objects/TW1_Interaction__c/fields/IncidentResponseModecEvidence__c.field-meta.xml
<CustomField>
    <fullName>IncidentResponseModecEvidence__c</fullName>
    <label>Incident - Response Modec Evidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncidentResponseModec</valueSetName>
    </valueSet>
</CustomField>