force-app/main/default/objects/TW1_Interaction__c/fields/IndicadorPrazo__c.field-meta.xml
<CustomField>
    <fullName>IndicadorPrazo__c</fullName>
    <formula>IF( Today() &lt;= DataLimiteParaTratativa__c, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Verde&quot;, 15, 15), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Vermelho&quot;, 15, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline Indicator</label>
    <type>Text</type>
</CustomField>