force-app/main/default/objects/TW1_Interaction__c/fields/JobFactors__c.field-meta.xml
<CustomField>
    <fullName>JobFactors__c</fullName>
    <label>Root Cause</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abuse and misuse</fullName>
            </value>
            <value>
                <fullName>Abuse or misuse of equipment</fullName>
            </value>
            <value>
                <fullName>Excessive wear and tear</fullName>
            </value>
            <value>
                <fullName>Improper motivation</fullName>
            </value>
            <value>
                <fullName>Inadequate communications</fullName>
            </value>
            <value>
                <fullName>Inadequate construction</fullName>
            </value>
            <value>
                <fullName>Inadequate engineering / design</fullName>
            </value>
            <value>
                <fullName>Inadequate leadersgip / supervision</fullName>
            </value>
            <value>
                <fullName>Inadequate maintenance</fullName>
            </value>
            <value>
                <fullName>Inadequate mental / psychological capacity</fullName>
            </value>
            <value>
                <fullName>Inadequate operations</fullName>
            </value>
            <value>
                <fullName>Inadequate physical capability</fullName>
            </value>
            <value>
                <fullName>Inadequate purchasing</fullName>
            </value>
            <value>
                <fullName>Inadequate tools / equipment</fullName>
            </value>
            <value>
                <fullName>Inadequate work standards</fullName>
            </value>
            <value>
                <fullName>Lack of knowledge</fullName>
            </value>
            <value>
                <fullName>Lack of skill</fullName>
            </value>
            <value>
                <fullName>Mental or psychological stress</fullName>
            </value>
            <value>
                <fullName>No job factors identified</fullName>
            </value>
            <value>
                <fullName>No personal factors indentified</fullName>
            </value>
            <value>
                <fullName>Physical or physiological stress</fullName>
            </value>
            <value>
                <fullName>Inadequate leadership / supervision</fullName>
            </value>
            <value>
                <fullName>Other job factor</fullName>
            </value>
            <value>
                <fullName>No personal factors identified</fullName>
            </value>
            <value>
                <fullName>Other personal factor</fullName>
            </value>
            <value>
                <fullName>Failure to allocate resources</fullName>
            </value>
            <value>
                <fullName>Failure to check / monitor / test</fullName>
            </value>
            <value>
                <fullName>Failure to communicate / coordinate</fullName>
            </value>
            <value>
                <fullName>Failure to control outsourced process</fullName>
            </value>
            <value>
                <fullName>Failure to document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>