force-app/main/default/objects/TW1_Interaction__c/fields/LinkParaFornecedor__c.field-meta.xml
<CustomField>
    <fullName>LinkParaFornecedor__c</fullName>
    <formula>HYPERLINK( $Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id , $Setup.ConfiguracoesGerais__c.URLPortalFornecedor__c + Id)</formula>
    <label>Link para o fornecedor</label>
    <type>Text</type>
</CustomField>