force-app/main/default/objects/TW1_Interaction__c/fields/PessoasLesionadas__c.field-meta.xml
<CustomField>
    <fullName>PessoasLesionadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affected people?</label>
    <type>Checkbox</type>
</CustomField>