force-app/main/default/objects/TW1_Interaction__c/fields/QuaisPessoasForamLesionadas__c.field-meta.xml
<CustomField>
    <fullName>QuaisPessoasForamLesionadas__c</fullName>
    <label>Which people were affected?</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>