force-app/main/default/objects/TW1_Interaction__c/fields/SentToSupplier__c.field-meta.xml
<CustomField>
    <fullName>SentToSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SentToSupplier?</label>
    <type>Checkbox</type>
</CustomField>