force-app/main/default/objects/TW1_Interaction__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <formula>TW1_Supplier__r.Name</formula>
    <label>SupplierName</label>
    <type>Text</type>
</CustomField>