force-app/main/default/objects/TW1_Interaction__c/fields/T_Do_you_have_the_PO__c.field-meta.xml
<CustomField>
    <fullName>T_Do_you_have_the_PO__c</fullName>
    <label>Do you have the PO?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>