force-app/main/default/objects/TW1_Interaction__c/fields/T_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>T_Item_Value__c</fullName>
    <label>Item Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>