force-app/main/default/objects/TW1_Interaction__c/fields/TCF_Action_Plan_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>TCF_Action_Plan_Submission_Date__c</fullName>
    <label>Action Plan Submission Date</label>
    <type>Date</type>
</CustomField>