force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>TW1_Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>22</length>
    <type>Text</type>
</CustomField>