force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Action_Plan_Step_ID__c.field-meta.xml
<CustomField>
    <fullName>TW1_Action_Plan_Step_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Plan Step ID</label>
    <referenceTo>TW1_Step__c</referenceTo>
    <relationshipLabel>Interactions (Action Plan Step ID)</relationshipLabel>
    <relationshipName>Interactions1</relationshipName>
    <type>Lookup</type>
</CustomField>