force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Approve_Supplier_Response__c.field-meta.xml
<CustomField>
    <fullName>TW1_Approve_Supplier_Response__c</fullName>
    <label>Approval - Supplier Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Final Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>