force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Attendees__c.field-meta.xml
<CustomField>
    <fullName>TW1_Attendees__c</fullName>
    <label>Attendees</label>
    <type>TextArea</type>
</CustomField>