force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Audit_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Audit_Description__c</fullName>
    <label>Audit Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>