force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Auditors__c.field-meta.xml
<CustomField>
    <fullName>TW1_Auditors__c</fullName>
    <label>Auditors</label>
    <type>TextArea</type>
</CustomField>