force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Base_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>TW1_Base_de_entrega__c</fullName>
    <label>Base de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>