force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Beginning_Date__c</fullName>
    <label>Beginning Date</label>
    <type>DateTime</type>
</CustomField>