force-app/main/default/objects/TW1_Interaction__c/fields/TW1_CFT_CREA__c.field-meta.xml
<CustomField>
    <fullName>TW1_CFT_CREA__c</fullName>
    <label>CFT/CREA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>