force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Clarification_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Clarification_Description__c</fullName>
    <label>Clarification Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>