force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Comments__c.field-meta.xml
<CustomField>
    <fullName>TW1_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>