force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interactions (Company Name)</relationshipLabel>
    <relationshipName>Interactions1</relationshipName>
    <type>Lookup</type>
</CustomField>