force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Contract_Date__c</fullName>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>