force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Critery_of_Approving__c.field-meta.xml
<CustomField>
    <fullName>TW1_Critery_of_Approving__c</fullName>
    <label>Critery of Approving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>