force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>