force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Date_Collection_Request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Date_Collection_Request__c</fullName>
    <label>Date Collection Request</label>
    <type>Date</type>
</CustomField>