force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Date_of_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>TW1_Date_of_Occurrence__c</fullName>
    <label>Date of Occurrence</label>
    <type>Date</type>
</CustomField>