force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Delayed_Days__c.field-meta.xml
<CustomField>
    <fullName>TW1_Delayed_Days__c</fullName>
    <formula>IF(  TW1_Contract_Date__c &gt;=  TW1_Issue_Date__c , 0, TW1_Issue_Date__c - TW1_Contract_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delayed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>