force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>TW1_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>