force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Demand_Number__c.field-meta.xml
<CustomField>
    <fullName>TW1_Demand_Number__c</fullName>
    <formula>IF(
 RecordType.DeveloperName = &quot;TW1_Extrajudicial_Notice&quot;, &quot;GB002-MDB-LET-SUB-&quot;+LEFT(Name,6)+ TEXT(YEAR(TODAY())),
IF( OR(RecordType.DeveloperName = &quot;TW1_Log_Receipt_Inspection&quot;,
RecordType.DeveloperName = &quot;TW1_Offshore_Receipt_Inspection&quot;,
RecordType.DeveloperName = &quot;TW1_QA_Receipt_Inspection&quot;,
RecordType.DeveloperName = &quot;TW1_QA_QC_Inspection&quot;,
RecordType.DeveloperName = &quot;TW1_Receipt_Inspection&quot;),&quot;RIR-&quot;+RIGHT(Name,6),



Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Number</label>
    <type>Text</type>
</CustomField>