force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Descricao_da_NC__c.field-meta.xml
<CustomField>
    <fullName>TW1_Descricao_da_NC__c</fullName>
    <label>NC description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>