force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Description__c.field-meta.xml
<CustomField>
    <fullName>TW1_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>