force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Description_contact_us__c.field-meta.xml
<CustomField>
    <fullName>TW1_Description_contact_us__c</fullName>
    <label>Description text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>