force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Diligiator__c.field-meta.xml
<CustomField>
    <fullName>TW1_Diligiator__c</fullName>
    <label>Diligiator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>