force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Dye_Pen__c.field-meta.xml
<CustomField>
    <fullName>TW1_Dye_Pen__c</fullName>
    <label>Dye Pen</label>
    <length>22</length>
    <type>Text</type>
</CustomField>