force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Evidences__c.field-meta.xml
<CustomField>
    <fullName>TW1_Evidences__c</fullName>
    <label>Evidences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>