force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Expiration__c.field-meta.xml
<CustomField>
    <fullName>TW1_Expiration__c</fullName>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>