force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Facility__c.field-meta.xml
<CustomField>
    <fullName>TW1_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>TW1_Facility__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>