force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Family_of_Materials__c.field-meta.xml
<CustomField>
    <fullName>TW1_Family_of_Materials__c</fullName>
    <label>Family of Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumíveis</fullName>
            </value>
            <value>
                <fullName>Dispositivo de segurança</fullName>
            </value>
            <value>
                <fullName>Elementos de fixação</fullName>
            </value>
            <value>
                <fullName>Eletro/Eletrônicos</fullName>
            </value>
            <value>
                <fullName>EPI/EPC</fullName>
            </value>
            <value>
                <fullName>Equip. Estáticos</fullName>
            </value>
            <value>
                <fullName>Equip. Rotativos</fullName>
            </value>
            <value>
                <fullName>Estrutural</fullName>
            </value>
            <value>
                <fullName>Ferramentas</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>Instrumentação</fullName>
            </value>
            <value>
                <fullName>Lifting</fullName>
            </value>
            <value>
                <fullName>Mangueiras/Mangotes</fullName>
            </value>
            <value>
                <fullName>Marinha</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Part Number</fullName>
            </value>
            <value>
                <fullName>Piping</fullName>
            </value>
            <value>
                <fullName>Rolamentos</fullName>
            </value>
            <value>
                <fullName>Válvulas</fullName>
            </value>
            <value>
                <fullName>Vedação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>