force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Fantasy_Name__c.field-meta.xml
<CustomField>
    <fullName>TW1_Fantasy_Name__c</fullName>
    <formula>TW1_Company_Name__r.TW1_Trade_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fantasy Name</label>
    <type>Text</type>
</CustomField>