force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Freight__c.field-meta.xml
<CustomField>
    <fullName>TW1_Freight__c</fullName>
    <label>Freight</label>
    <length>10</length>
    <type>Text</type>
</CustomField>