force-app/main/default/objects/TW1_Interaction__c/fields/TW1_From_Community__c.field-meta.xml
<CustomField>
    <fullName>TW1_From_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Community</label>
    <type>Checkbox</type>
</CustomField>