force-app/main/default/objects/TW1_Interaction__c/fields/TW1_ID_Step_Return_Audit__c.field-meta.xml
<CustomField>
    <fullName>TW1_ID_Step_Return_Audit__c</fullName>
    <label>ID Step Return Audit</label>
    <length>18</length>
    <type>Text</type>
</CustomField>