force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Incident_Classification__c.field-meta.xml
<CustomField>
    <fullName>TW1_Incident_Classification__c</fullName>
    <label>Incident Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tabular</fullName>
            </value>
            <value>
                <fullName>Non-Tabular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>