force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>TW1_Incident_Location__c</fullName>
    <label>Incident Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Shipyard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>