force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Incident_Subtype__c.field-meta.xml
<CustomField>
    <fullName>TW1_Incident_Subtype__c</fullName>
    <label>Incident Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dropped Object</fullName>
            </value>
            <value>
                <fullName>Evironmental</fullName>
            </value>
            <value>
                <fullName>Fatality</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>General Near Miss</fullName>
            </value>
            <value>
                <fullName>Improper waste disposal</fullName>
            </value>
            <value>
                <fullName>Information security</fullName>
            </value>
            <value>
                <fullName>Lost Time Injury</fullName>
            </value>
            <value>
                <fullName>Medical Treatment</fullName>
            </value>
            <value>
                <fullName>Process/operation non-conformance</fullName>
            </value>
            <value>
                <fullName>Process/procedural non-conformance</fullName>
            </value>
            <value>
                <fullName>Restricted Work Day Case</fullName>
            </value>
            <value>
                <fullName>Significant Event</fullName>
            </value>
            <value>
                <fullName>Spill to sea</fullName>
            </value>
            <value>
                <fullName>System non-conformance</fullName>
            </value>
            <value>
                <fullName>Not Yet Classified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>