force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Incident_Title__c.field-meta.xml
<CustomField>
    <fullName>TW1_Incident_Title__c</fullName>
    <label>Incident Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>