force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>TW1_Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Injury/Illnes</fullName>
                <label>Injury</label>
            </value>
            <value>
                <fullName>Near Miss</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Industrial Hygiene</fullName>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Vehicular damage</fullName>
            </value>
            <value>
                <fullName>Illnes</fullName>
            </value>
            <value>
                <fullName>Near Miss / Illness</fullName>
            </value>
            <value>
                <fullName>Near Miss / Injury</fullName>
            </value>
            <value>
                <fullName>Near Miss / Asset</fullName>
            </value>
            <value>
                <fullName>Near Miss / Environmental</fullName>
            </value>
            <value>
                <fullName>Near Miss / Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>