force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Inspection_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Recommendation__c</fullName>
    <label>Inspection Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>