force-app/main/default/objects/TW1_Interaction__c/fields/TW1_Inspection_Request_Form_N__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inspection_Request_Form_N__c</fullName>
    <label>Inspection Request Form Nº</label>
    <length>255</length>
    <type>Text</type>
</CustomField>